core/k8s/06-bridges/meilisearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: infra-bridges
spec:
  type: ExternalName
  externalName: host.docker.internal
  ports:
    - port: 7700
      targetPort: 7700
      protocol: TCP
